test_scores/negative_dimers/features/Q00534.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q00534.pkl.xz